Fix syntax errors in documentation and english phrases
Thx Patrick Monnerat <Patrick.Monnerat@datasphere.ch>

--- a/doc/xca.1
+++ b/doc/xca.1
@@ -17,7 +17,7 @@ A GUI for handling X509 certificates, RSA/DSA/EC keys, PKCS#10 Requests and CRLs
 .br
 .SH "DESCRIPTION"
 This application is intended as CA, certificate- and Key store. It uses a single file to store the items.
-Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA, DSA and EC keys and Certificate revokation lists.
+Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA, DSA and EC keys and Certificate revocation lists.
 The signing of requests, and the creation of selfsigned certificates
 is supported. Both can use templates for simplicity.
 The PKI structures can be imported and exported in several formats
