--- a/lang/fr.po
+++ b/lang/fr.po
@@ -423,7 +423,7 @@ msgid "All files ( * )"
 msgstr "Tous les fichiers ( * )"
 
 #: ExportDialog#7
-msgid "PEM Text format format with headers"
+msgid "PEM Text format with headers"
 msgstr "Format textuel PEM avec des en-têtes"
 
 #: ExportDialog#8
@@ -2330,7 +2330,7 @@ msgstr "Numéro de la liste de révocation"
 
 #: db_crl#8
 msgid ""
-"The revokation list already exists in the database as:\n"
+"The revocation list already exists in the database as:\n"
 "'%1'\n"
 "and so it was not imported"
 msgstr ""
@@ -3066,24 +3066,24 @@ msgid "Internal error: Unexpected message: %1 %2"
 msgstr "Erreur interne: message inattendu: %1 %2"
 
 #: pki_crl#1
-msgid "Successfully imported the revokation list '%1'"
+msgid "Successfully imported the revocation list '%1'"
 msgstr "La liste de révocation '%1' a été importée avec succès"
 
 #: pki_crl#2
-msgid "Delete the revokation list '%1'?"
+msgid "Delete the revocation list '%1'?"
 msgstr "Détruire la liste de révocation '%1' ?"
 
 #: pki_crl#3
-msgid "Successfully created the revokation list '%1'"
+msgid "Successfully created the revocation list '%1'"
 msgstr "La liste de révocation '%1' a été créée avec succès"
 
 #: pki_crl#4
-msgid "Delete the %1 revokation lists: %2?"
+msgid "Delete the %1 revocation lists: %2?"
 msgstr "Détruire les %1 listes de révocation: %2 ?"
 
 #: pki_crl#5
 msgid ""
-"Unable to load the revokation list in file %1. Tried PEM and DER formatted "
+"Unable to load the revocation list in file %1. Tried PEM and DER formatted "
 "CRL."
 msgstr ""
 "Impossible de charger le liste de révocation du fichier %1. Les formats PEM "
