--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
- * Update to OpenSSL 1.0.2c for Windows and MAC
+ * Update to OpenSSL 1.0.2d for Windows and MAC
+ * SF Bug #105 1.2.0 OS X Retina Display Support
  * Digitaly sign Windows and MAC binaries with a valid certificate
  * Refactor the context menu. Exporting many selected items
    to the clipboard or a PEM file now works. Certificate renewal and revocation
