update changelog and README.md

--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+xca 1.2.0 Thu Aug 11 2015
+
  * Update to OpenSSL 1.0.2d for Windows and MAC
  * SF Bug #105 1.2.0 OS X Retina Display Support
  * Digitaly sign Windows and MAC binaries with a valid certificate
