--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+ * SF. Bug. #81 Make xca qt5 compatible
+ * SF. Bug. #107 error:0D0680A8:asn1 encoding
+ * Don't validate notBefore and notAfter if they are disabled.
+
 xca 1.3.1 Fri Aug 21 2015
 
  * Fix endless loop while searching for a signer of a CRL
