--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+ * Gentoo Bug #562288 linking fails
  * Add OID resolver, move some Menu items to "Extra"
  * SF. Bug. #81 Make xca qt5 compatible
  * SF. Bug. #107 error:0D0680A8:asn1 encoding
