Fix spelling errors found by lintian packge checker

--- a/lang/es.po
+++ b/lang/es.po
@@ -947,7 +947,7 @@ msgid ""
 msgstr ""
 
 #: MainWindow#71
-msgid "The following error occured:"
+msgid "The following error occurred:"
 msgstr ""
 
 #: MainWindow#72
