--- a/lang/tr.po
+++ b/lang/tr.po
@@ -960,7 +960,7 @@ msgid ""
 msgstr ""
 
 #: MainWindow#70
-msgid "The following error occured:"
+msgid "The following error occurred:"
 msgstr ""
 
 #: MainWindow#71
