--- a/lang/xca.pot
+++ b/lang/xca.pot
@@ -1112,7 +1112,7 @@ msgid ""
 msgstr ""
 
 #: MainWindow#84
-msgid "The following error occured:"
+msgid "The following error occurred:"
 msgstr ""
 
 #: MainWindow#85
