Fix further spelling errors found by lintian packge checker

--- a/lang/es.po
+++ b/lang/es.po
@@ -1768,7 +1768,7 @@ msgid "Repeat %1"
 msgstr ""
 
 #: PwDialog#5
-msgid "%1 missmatch"
+msgid "%1 mismatch"
 msgstr ""
 
 #: PwDialog#6
@@ -2875,7 +2875,7 @@ msgid "Please insert card: %1 %2 [%3] with Serial: %4"
 msgstr ""
 
 #: pki_scard#11
-msgid "Public Key missmatch. Please re-import card"
+msgid "Public Key mismatch. Please re-import card"
 msgstr ""
 
 #: pki_scard#12
