--- a/lang/fr.po
+++ b/lang/fr.po
@@ -1880,7 +1880,7 @@ msgid "Repeat %1"
 msgstr "Répéter %1"
 
 #: PwDialog#4
-msgid "%1 missmatch"
+msgid "%1 mismatch"
 msgstr "%1 ne correspond pas"
 
 #: PwDialog#5
@@ -2339,7 +2339,7 @@ msgid "..."
 msgstr "..."
 
 #: SearchPkcs11#4
-msgid "include sub directorys"
+msgid "Include subdirectories"
 msgstr "include les sous-dossiers"
 
 #: SearchPkcs11#5
@@ -3220,7 +3220,7 @@ msgid "Please insert card: %1 %2 [%3] with Serial: %4"
 msgstr "SVP insérer la carte %1 %2 [%3] avec le numéro de série: %4"
 
 #: pki_scard#10
-msgid "Public Key missmatch. Please re-import card"
+msgid "Public Key mismatch. Please re-import card"
 msgstr "La clé publique ne correspond pas. Veuillez re-importer la carte"
 
 #: pki_scard#11
