--- a/changelog
+++ b/changelog
@@ -1,3 +1,26 @@
+xca 1.4.1-pre02 Thu Mar 1 2018
+
+ * SF Bug #122 isValid() tried to convert the serial to 64 bit
+ * Beautify mandatory distinguished name entriy errors
+ * Support Dragging certificates and other items as PEM text
+ * Show User settings and installation path in the about dialog
+
+xca 1.4.1-pre01 Sun Feb 18 2018
+
+ * Remove SPKAC support. Netscape is not of this world anymore.
+ * SF bug #124 Wrong assumptions about slots returned by PKCS11 library
+ * Cleanup and improve the OID text files, remove senseless aia.txt
+ * Update HTML documentation
+ * Refine and document Entropy gathering
+ * Indicate development and release version by git commit hash
+ * Fix dumping private keys during "Dump database"
+ * Fix Null pointer exception when importing PKCS#12 with OpenSSL 1.1.0
+ * SF Bug #110 Exported private key from 4096 bit SSH key is wrong
+ * SF Bug #109 Revoked.png isn't a valid image
+ * SF Bug #121 CA serial number is ignored in hierarchical view
+ * Improve speed of Bulk import.
+ * Fix starting xca with a database as first arg
+
 xca 1.4.0 Thu Jan 4 2018
 
  * Update OpenSSL version for MacOSX and W32 to 1.1.0g
