Replace sf.net links by hohnstaedt.de/xca links
greping "sourceforge.net" was not sufficient

--- a/doc/xca.1
+++ b/doc/xca.1
@@ -65,7 +65,7 @@ from the database
 .I database
 in PEM format to <STDOUT>
 .SH SEE ALSO
-A more detailed HTML documentation can be found in the doc directory, in the "Help" menu of the application or on http://xca.sf.net
+A more detailed HTML documentation can be found in the doc directory, in the "Help" menu of the application or on http://hohnstaedt.de/documentation
 
 .SH AUTHOR
 This manual page was written by Christian Hohnstaedt <christian@hohnstaedt.de>
