--- a/doc/xca.1
+++ b/doc/xca.1
@@ -1,24 +1,24 @@
 .TH XCA 1
 .SH NAME
-xca \- X Certificate and key management
+.B xca
+\- X Certificate and key management
 .br
-A GUI for handling X509 certificates, RSA/DSA/EC keys, PKCS#10 Requests and CRLs in Software and on Smartcards.
+
+A GUI for handling X509 certificates, RSA/DSA/EC keys, PKCS#10 Requests and
+CRLs in Software and on Smartcards.
 .SH SYNOPSIS
 .B xca
 .RI [ -v ]
 .RI [ -d ]
 .RI [ -x ]
 .br
-.B xca
-.B extract
-.RI <database>
-.RI <type>
-.RI <name>
-.br
 .SH "DESCRIPTION"
-This application is intended as CA, certificate- and Key store. It uses a single file to store the items.
-Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA, DSA and EC keys and Certificate revocation lists.
-The signing of requests, and the creation of selfsigned certificates
+This application is intended as CA, certificate- and Key store.
+It uses a SQL database to store the items. By default this is SQLite3,
+but MySQL and PostrgreSQL are also tested and supported.
+Known types are Certificate signing requests (PKCS#10), Certificates (X509v3),
+RSA, DSA and EC keys and Certificate revocation lists.
+The signing of requests, and the creation of self-signed certificates
 is supported. Both can use templates for simplicity.
 The PKI structures can be imported and exported in several formats
 like PKCS#12, PEM, DER, PKCS#8, PKCS#7.
@@ -37,7 +37,11 @@ There are some deprecated legacy options:
 .RI [ -t ]
 .RI [ -P ]
 .br
-Before XCA 0.9.0, the type of the items had to be given. This was removed since. Just put all keys, certs, requests and the database unsorted on the commandline. For backwards compatibility those options are ignored when found.
+Before XCA 0.9.0, the type of the items had to be given.
+This was removed since.
+Just put all keys, certs, requests and the database
+unsorted on the commandline.
+For backwards compatibility those options are ignored when found.
 .TP
 .B \-v
 Show version information and exit.
@@ -50,22 +54,14 @@ Exit after processing all commandline options.
 Usually after importing the items from commandline
 the application will startup as usual. With the
 .I -x
-option given it will exit after finishing the import dialog. This is useful if xca is used as default application for viewing certificates, keys or requests.
+option given it will exit after finishing the import dialog.
+This is useful if xca is used as default application for
+viewing certificates, keys or requests.
 
-.TP
-.B xca extract <database> <type> <name>
-extracts the item with internal name
-.I <name>
-and the type
-.I cert
-.I req
-or
-.I crl
-from the database
-.I database
-in PEM format to <STDOUT>
 .SH SEE ALSO
-A more detailed HTML documentation can be found in the doc directory, in the "Help" menu of the application or on http://hohnstaedt.de/documentation
+A more detailed HTML documentation can be found in the doc directory,
+in the "Help" menu of the application or on
+http://hohnstaedt.de/documentation
 
 .SH AUTHOR
 This manual page was written by Christian Hohnstaedt <christian@hohnstaedt.de>
