--- a/doc/xca.1
+++ b/doc/xca.1
@@ -11,6 +11,8 @@ CRLs in Software and on Smartcards.
 .RI [ -v ]
 .RI [ -d ]
 .RI [ -x ]
+.RI [ -i ]
+.RI [ -I ]
 .br
 .SH "DESCRIPTION"
 This application is intended as CA, certificate- and Key store.
@@ -46,7 +48,7 @@ For backwards compatibility those options are ignored when found.
 .B \-v
 Show version information and exit.
 .TP
-.B \-d
+.B \-d <database-name>
 expect the following argument to be a new database to use.
 .TP
 .B \-x
@@ -57,6 +59,16 @@ the application will startup as usual. With the
 option given it will exit after finishing the import dialog.
 This is useful if xca is used as default application for
 viewing certificates, keys or requests.
+.TP
+.B \-i <index-file>
+Creates an OpenSSL index file with the file name <index-file>.
+The file will contain information about all certificates in the database.
+.TP
+.B \-I <directory>
+Creates OpenSSL index files with the file name
+<directory>/<ca-internal-name>.txt for each CA with issued certificates.
+Each file will contain information about all issued certificates
+of the CA. The target directory must exist.
 
 .SH SEE ALSO
 A more detailed HTML documentation can be found in the doc directory,
