--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+ * Fix crash during PKCS#12 export
+ * Update HTTPS_server template and add example SAN
+ * Acceppt empty password for private key decryption
+ * Fix legacy database-without-password import
+
 xca 2.0.0-pre01 Sun Mar 11 2018
 
  * Close GitHub Bug #5: Exporting a private key results
