Use english date in changelog during release

--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-xca 2.0.0-pre02 Di Mär 13 2018
+xca 2.0.0-pre02 Tue Mar 13 2018
 
  * Fix crash during PKCS#12 export
  * Update HTTPS_server template and add example SAN
