--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+ * Accept drivers that don't support transactions
+ * Install MySQL and PostgreSQL drivers on windows
+ * Closes #10: Warn if certificate without any extension is created
+ * Add table prefix to be prepended to each table for remote SQL DB
+ * Update translations
+
 xca 2.0.0-pre03 Thu Mar 15 2018
 
  * Fix installation of sql plugins in the Windows installer
