Add "X-Qt-Contexts: true\n" to slovak translation
As proposed by Patrick in issue #14
"Many problems with the new translation
 strategy with contexts in po files"

--- a/lang/sk.po
+++ b/lang/sk.po
@@ -15,6 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Gtranslator 2.91.7\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Qt-Contexts: true\n"
 
 #: ../ui/CaProperties.ui:30
 msgctxt "CaProperties|"
