--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+ * Close #32: Version field contains "Created by Qt/QMake" on MacOSX
+ * Review and update russian ltranslation
+ * Close #31: Closing certificate details window toggles tree folding
  * Close #25: Certificates are no longer coloured
  * Close #24: Add LibreSSL support. Tested with LibreSSL 2.7.2
  * Close #23: Improve limiting to pattern in certificate tree view
