--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+ * Close #34: Improve Mac OSX installation
+ * Close #27: Configurable certificate expiry warning threshold
+ * Generate calender (.ics) files for certificate and CRL expiries
+
 xca 2.0.1 Tue May 08 2018
 
  * Close #32: Version field contains "Created by Qt/QMake" on MacOSX
