--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+ * Close #36: Support adding CN to X509v3 SAN automatically
+ * Close #35: Configurable size of serial number.
  * Close #34: Improve Mac OSX installation
  * Close #27: Configurable certificate expiry warning threshold
  * Generate calender (.ics) files for certificate and CRL expiries
