--- a/lang/fr.po
+++ b/lang/fr.po
@@ -439,7 +439,7 @@ msgstr "&Emetteur"
 #: ../ui/CrlDetail.ui:241
 msgctxt "CrlDetail|"
 msgid "&Extensions"
-msgstr "E%xtensions"
+msgstr "Extensions"
 
 #: ../ui/CrlDetail.ui:261
 msgctxt "CrlDetail|"
