Added Keyboard shortcut for Extensions tab in French

--- a/lang/fr.po
+++ b/lang/fr.po
@@ -439,7 +439,7 @@ msgstr "&Emetteur"
 #: ../ui/CrlDetail.ui:241
 msgctxt "CrlDetail|"
 msgid "&Extensions"
-msgstr "Extensions"
+msgstr "&Extensions"
 
 #: ../ui/CrlDetail.ui:261
 msgctxt "CrlDetail|"
